# scivcd

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scivcd/: __init__.py  api.py  cli.py  composed_lifecycle.py  exemptions.py  export_audit.py  gating.py  projection.py  pytest_plugin.py  vcd_actions.py  vcd_autofix.py  vcd_baseline.py  vcd_checks_artists.py  vcd_checks_colorbar.py  vcd_checks_content.py  vcd_checks_layout.py  vcd_checks_legend.py  vcd_checks_perceptual.py  vcd_checks_publication.py  vcd_checks_semantic.py  vcd_checks_structure.py  vcd_checks_text.py  vcd_complexity.py  vcd_config.py  vcd_core.py  vcd_policy.py  vcd_tighten.py
scivcd/checks/: __init__.py  accessibility.py  content.py  layout.py  policy.py  typography.py
scivcd/core/: __init__.py  config.py  registry.py  state.py  types.py
scivcd/reports/: __init__.py  json.py  markdown.py  sarif.py
tests/: test_scivcd.py
tests/modern/: conftest.py  test_api.py  test_checks_accessibility.py  test_checks_content.py  test_checks_layout.py  test_checks_policy.py  test_checks_typography.py  test_composed_lifecycle.py  test_config.py  test_exemptions.py  test_export_audit.py  test_gating.py  test_phase1_report_api_cli.py  test_projection.py  test_registry.py  test_types.py
